--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header class="main-header">
+    <img src="img/image.jpg" alt="右原製茶 工場の外観" width="100%">
     <h1>右原製茶へようこそ</h1>
     <nav>
       <a href="#">ホーム</a>
@@ -15,6 +16,7 @@
       <a href="#">お問い合わせ</a>
     </nav>
   </header>
+  
   
 
   <main>
