--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <header class="main-header">
-    <img src="img/image.jpg" alt="右原製茶 工場の外観" width="50%">
+    <img class="main-image" src="img/image.jpg" alt="右原製茶 工場の外観">
+    >
     <h1>右原製茶へようこそ</h1>
     <nav>
       <a href="#">ホーム</a>
